--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <header>
     <!-- Logo à esquerda -->
     <div class="logo">
-      <a href="index.html" class="logo-link">
-        <img src="images/logo letras_preto.svg" alt="logo marta" class="logo-default" loading="lazy" width="70" height="70">
-        <img src="images/logo letras_preto.svg" alt="logo marta" class="logo-hover" loading="lazy" width="70" height="70">
-    </a>
+      <div class="logo-container">
+        <a href="index.html" class="logo-link">
+          <img src="images/logo letras_preto.svg" alt="logo marta" class="logo-default">
+          <img src="images/logo letras_preto.svg" alt="logo marta" class="logo-hover">
+        </a>
+      </div>
     </div>
     
     <!-- Elementos à direita agrupados -->
