--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     
     <!-- Terceira linha -->
     <div class="grid-item item-5">
-      <img src="images/05 Underground/GIF_Underground copiar.gif" 
+      <img src="images/05 Underground/GIF_Underground copiar.webm" 
            alt="Underground" 
            loading="lazy" 
            width="800" 
