--- a/Mariana&Felipe.html
+++ b/Mariana&Felipe.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>MARTA - Portfolio</title>
-<link rel="stylesheet" href="Mariana&Felipe.css">
+<link rel="stylesheet" href="styles/Mariana&Felipe.css">
 <link rel="stylesheet" href="search.min.css">
 <link rel="stylesheet" href="project-navigation.min.css">
 <link rel="stylesheet" href="custom-cursor.min.css">
