--- a/Underground.html
+++ b/Underground.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARTA - Underground</title>
-    <link rel="stylesheet" href="Underground.css">
+    <link rel="stylesheet" href="styles/Underground.css">
     <link rel="stylesheet" href="search.min.css">
     <link rel="stylesheet" href="project-navigation.min.css">
     <link rel="stylesheet" href="custom-cursor.min.css">
