--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MARTA - Portfólio</title>
-  <link rel="stylesheet" href="index.min.css">
-  <link rel="stylesheet" href="search.min.css">
-  <link rel="stylesheet" href="custom-cursor.min.css">
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="search.css">
+  <link rel="stylesheet" href="custom-cursor.css">
 </head>
 <body>
 
