--- a/public/Underground.html
+++ b/public/Underground.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARTA - Underground</title>
     <link rel="stylesheet" href="styles/Underground.css">
-    <link rel="stylesheet" href="search.min.css">
-    <link rel="stylesheet" href="project-navigation.min.css">
-    <link rel="stylesheet" href="custom-cursor.min.css">
+    <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="project-navigation.css">
+    <link rel="stylesheet" href="custom-cursor.css">
     <link rel="stylesheet" href="global-typography.css">
 </head>
 <body>
