--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="custom-cursor.css">
+  <link rel="stylesheet" href="project-navigation.css">
+
+
 </head>
 <body>
 
