--- a/public/A-Arte-da-Mesa.html
+++ b/public/A-Arte-da-Mesa.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="A-Arte-da-Mesa.css">
     <link rel="stylesheet" href="search.css">
     <link rel="stylesheet" href="project-navigation.css">
-    <link rel="stylesheet" href="custom-cursor.min.css">
+    <link rel="stylesheet" href="custom-cursor.css">
     <link rel="stylesheet" href="global-typography.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         <!-- Logo à esquerda -->
         <div class="logo">
             <div class="logo-container">
-                <a href="/public/index.html" class="logo-link">
+                <a href="index.html" class="logo-link">
                     <img src="images/logo letras_preto.svg" alt="logo marta" class="logo-default">
                     <img src="images/logo letras_preto.svg" alt="logo marta" class="logo-hover">
                 </a>
@@ -27,7 +27,7 @@
             <!-- Menu desktop -->
             <nav class="desktop-nav">
                 <a href="/public/about-me.html">about me</a>
-                <a href="/public/index.html">work</a>
+                <a href="index.html">work</a>
             </nav>
             
             <!-- Ícone de pesquisa - WRAPPED IN SEARCH CONTAINER -->
@@ -80,7 +80,7 @@
     <div class="mobile-nav">
         <div class="close-btn">✕</div>
         <a href="/public/about-me.html">about me</a>
-        <a href="/public/index.html">work</a>
+        <a href="index.html">work</a>
     </div>
 
   
