--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MARTA - Portfólio</title>
+  
   <link rel="stylesheet" href="styles/index.css">
   <link rel="stylesheet" href="search.css">
   <link rel="stylesheet" href="custom-cursor.css">
   <link rel="stylesheet" href="project-navigation.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
+
 
 
 </head>
@@ -174,7 +177,11 @@
     </div>
   </div>
   
-  <script src="homepage-script.js"></script>
+    <!-- Depois, seus scripts na ordem correta -->
+    <script src="homepage-script.js"></script>
+    <script src="search.js"></script>
+    <script src="custom-cursor.js"></script>
+
 
 </body>
 
