--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>MARTA - Portfólio</title>
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="search.css">
-  <link rel="stylesheet" href="custom-cursor.min.css">
+  <link rel="stylesheet" href="custom-cursor.css">
 </head>
 <body>
 
