--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     
     <!-- Segunda linha -->
     <div class="grid-item item-3">
-      <img src="images/06-FALP/Business-Card-Mockup.webp" alt="Cartão de visita FALP" loading="lazy" width="800" height="450">
+      <img src="images/06-falp/Business-Card_Mockup.webp" alt="Cartão de visita FALP" loading="lazy" width="800" height="450">
       <div class="overlay">
         <h3>FALP</h3>
         <p>Visual identity for the Federation of Portuguese Language Lawyers, promoting legal cooperation among Lusophone countries and human rights.</p>
@@ -144,7 +144,7 @@
     
     <!-- Terceira linha -->
     <div class="grid-item item-5">
-      <img src="images/05-Underground/GIF-Underground.webm" alt="Underground" loading="lazy" width="800" height="450">
+      <img src="images/05-underground/GIF_Underground-copiar.webm" alt="Underground" loading="lazy" width="800" height="450">
       <div class="overlay">
         <h3>Underground</h3>
         <p>A magazine honoring British underground design, reflecting on Peter Saville's transformative visual legacy and the ongoing innovation shaping the nation's creative identity.</p>
@@ -172,9 +172,9 @@
   </div>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.min.js"></script>
-  <script src="homepage-script.min.js"></script>
-  <script src="search.min.js"></script>
-  <script src="custom-cursor.min.js"></script>
+  <script src="homepage-script.js"></script>
+  <script src="search.js"></script>
+  <script src="custom-cursor.js"></script>
 </body>
 
 
