--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </div>
   </div>
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="homepage-script.js"></script>
   <script src="search.js"></script>
   <script src="custom-cursor.js"></script>
