--- a/Mariana&Felipe.html
+++ b/Mariana&Felipe.html
@@ -4,10 +4,10 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>MARTA - Portfolio</title>
-<link rel="stylesheet" href="styles/Mariana&Felipe.css">
-<link rel="stylesheet" href="search.min.css">
-<link rel="stylesheet" href="project-navigation.min.css">
-<link rel="stylesheet" href="custom-cursor.min.css">
+<link rel="stylesheet" href="Mariana&Felipe.css">
+<link rel="stylesheet" href="search.css">
+<link rel="stylesheet" href="project-navigation.css">
+<link rel="stylesheet" href="custom-cursor.css">
 <link rel="stylesheet" href="global-typography.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
         <div class="right-elements">
             <!-- Menu desktop -->
             <nav class="desktop-nav">
-                <a href="#">about me</a>
+                <a href="">about me</a>
                 <a href="index.html">work</a>
             </nav>
             
@@ -87,7 +87,7 @@
 <main>
 <!-- Seção Hero -->
 <div class="hero-image">
-<img src="images/02 Mariana e Ipy/BenditoMockup-WWW-Wine_Bottle-04 copiar.webp" alt="Pessoa servindo vinho em uma mesa de jantar" />
+<img src="images/02-Mariana e Ipy/BenditoMockup-WWW-Wine_Bottle-04 copiar.webp" alt="Pessoa servindo vinho em uma mesa de jantar" />
 </div>
 <!-- Seção do título e descrição -->
 <div class="project-header">
@@ -112,7 +112,7 @@
 <!-- Primeira galeria com 2 imagens -->
 <div class="gallery">
 <div class="gallery-item">
-<img src="images/02 Mariana e Ipy/convite e vinho.webp" alt="Convite e vinho" />
+<img src="images/02-Mariana e Ipy/convite e vinho.webp" alt="Convite e vinho" />
 </div>
 </div>
 <!-- Grid complexo de imagens -->
@@ -120,43 +120,43 @@
 <!-- Primeira linha: 2 imagens -->
 <div class="gallery-row top-row">
 <div class="gallery-item">
-<img src="images/02 Mariana e Ipy/MarianaIpy_SimãoPernas-1777.webp" alt="Grid de cartões de convite" />
+<img src="images/02-Mariana e Ipy/MarianaIpy_SimãoPernas-1777.webp" alt="Grid de cartões de convite" />
 </div>
 <div class="gallery-item">
-<img src="images/02 Mariana e Ipy/MarianaIpy_SimãoPernas-2553.webp" alt="Mesa posta com cartão personalizado" />
+<img src="images/02-Mariana e Ipy/MarianaIpy_SimãoPernas-2553.webp" alt="Mesa posta com cartão personalizado" />
 </div>
 </div>
 <!-- Linha do meio: Banner M&F -->
 <div class="gallery-row middle-row">
 <!-- Célula M&F -->
 <div class="gallery-cell mf-logo">
-<img src="images/02 Mariana e Ipy/Logom&f.svg" alt="Logo M&F" />
+<img src="images/02-Mariana e Ipy/Logom&f.svg" alt="Logo M&F" />
 </div>
 <!-- Célula Mariana e Iry Banner -->
 <div class="gallery-cell mariana-banner">
-<img src="images/02 Mariana e Ipy/Logo_extenso.svg" alt="Mariana e Ipy" />
+<img src="images/02-Mariana e Ipy/Logo_extenso.svg" alt="Mariana e Ipy" />
 </div>
 <!-- Container do código de cor -->
 <div class="gallery-cell color-code-container">
-<img src="images/02 Mariana e Ipy/colourcode_nanaipy.svg" alt="Códigos de cores">
+<img src="images/02-Mariana e Ipy/colourcode_nanaipy.svg" alt="Códigos de cores">
 </div>
 </div>
 <!-- Última linha: 3 imagens -->
 <div class="gallery-row bottom-row">
 <div class="gallery-item">
-<img src="images/02 Mariana e Ipy/MarianaIpy_SimãoPernas-2544.webp" alt="Detalhe de mesa com cartão" />
+<img src="images/02-Mariana e Ipy/MarianaIpy_SimãoPernas-2544.webp" alt="Detalhe de mesa com cartão" />
 </div>
 <div class="gallery-item">
-<img src="images/02 Mariana e Ipy/MarianaIpy_SimãoPernas-1613.webp" alt="Prato com cartão personalizado" />
+<img src="images/02-Mariana e Ipy/MarianaIpy_SimãoPernas-1613.webp" alt="Prato com cartão personalizado" />
 </div>
 <div class="gallery-item">
-<img src="images/02 Mariana e Ipy/MarianaIpy_SimãoPernas-1600.webp" alt="Decoração da mesa" />
+<img src="images/02-Mariana e Ipy/MarianaIpy_SimãoPernas-1600.webp" alt="Decoração da mesa" />
 </div>
 </div>
 </div>
 <!-- Imagem final -->
 <div class="wine-image">
-<img src="images/02 Mariana e Ipy/Vinho NANA e IPY.webp" alt="Garrafas de vinho personalizadas" />
+<img src="images/02-Mariana e Ipy/Vinho NANA e IPY.webp" alt="Garrafas de vinho personalizadas" />
 </div>
 </main>
 <button id="back-to-top" class="back-to-top-btn" title="Voltar ao início">
@@ -202,8 +202,8 @@
         </div>
     </div>
 </footer>
-<script src="homepage-script.min.js"></script>
-<script src="search.min.js"></script>
-<script src="custom-cursor.min.js"></script>
+<script src="homepage-script.js"></script>
+<script src="search.js"></script>
+<script src="custom-cursor.js"></script>
 </body>
 </html>
