--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARTA - A Arte da Mesa</title>
-    <link rel="stylesheet" href="A-Arte-da-Mesa.min.css">
-    <link rel="stylesheet" href="search.min.css">
-    <link rel="stylesheet" href="project-navigation.min.css">
+    <link rel="stylesheet" href="A-Arte-da-Mesa.css">
+    <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="project-navigation.css">
 </head>
 <body>
     <header>
         <!-- Logo à esquerda -->
         <div class="logo">
             <div class="logo-container">
-                <a href="Homepage.html" class="logo-link">
+                <a href="index.html" class="logo-link">
                     <img src="images/logo letras_preto.svg" alt="logo marta" class="logo-default">
                     <img src="images/logo letras_preto.svg" alt="logo marta" class="logo-hover">
                 </a>
@@ -25,7 +25,7 @@
             <!-- Menu desktop -->
             <nav class="desktop-nav">
                 <a href="#">about me</a>
-                <a href="Homepage.html">work</a>
+                <a href="index.html">work</a>
             </nav>
             
             <!-- Ícone de pesquisa - WRAPPED IN SEARCH CONTAINER -->
@@ -78,7 +78,7 @@
     <div class="mobile-nav">
         <div class="close-btn">✕</div>
         <a href="#">about me</a>
-        <a href="Homepage.html">work</a>
+        <a href="index.html">work</a>
     </div>
 
   
@@ -185,8 +185,8 @@
     </div>
 </footer>
 
-    <script src="homepage-script.min.js"></script>
-    <script src="search.min.js"></script>
+    <script src="homepage-script.js"></script>
+    <script src="search.js"></script>
 
     
 </body>
