--- a/falp.html
+++ b/falp.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARTA - FALP</title>
-    <link rel="stylesheet" href="falp.min.css">
-    <link rel="stylesheet" href="search.min.css">
-    <link rel="stylesheet" href="project-navigation.min.css">
+    <link rel="stylesheet" href="falp.css">
+    <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="project-navigation.css">
 </head>
 <body>
     <header>
@@ -201,7 +201,8 @@
             <a href="https://www.linkedin.com/in/marta-bello-pais-de-almeida/" target="_blank">linkedin</a>
         </div>
 </footer>
-    <script src="homepage-script.min.js"></script>
-    <script src="search.min.js"></script>
+    <script src="homepage-script.js"></script>
+    <script src="search.js"></script>
+    <script src="custom-cursor.js"></script>
 </body>
 </html>
