--- a/falp.html
+++ b/falp.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="falp.css">
     <link rel="stylesheet" href="search.css">
     <link rel="stylesheet" href="project-navigation.css">
+    <link rel="stylesheet" href="custom-cursor.css">
+    <link rel="stylesheet" href="global-typography.css">
+
 </head>
 <body>
     <header>
