--- a/Mariana&Felipe.html
+++ b/Mariana&Felipe.html
@@ -122,10 +122,10 @@
 <!-- Primeira linha: 2 imagens -->
 <div class="gallery-row top-row">
 <div class="gallery-item">
-<img src="images/02-Mariana e Ipy/MarianaIpy_SimãoPernas-1777.webp" alt="Grid de cartões de convite" />
+<img src="images/02-Mariana e Ipy/MarianaIpy1777.webp" alt="Grid de cartões de convite" />
 </div>
 <div class="gallery-item">
-<img src="images/02-Mariana e Ipy/MarianaIpy_SimãoPernas-2553.webp" alt="Mesa posta com cartão personalizado" />
+<img src="images/02-Mariana e Ipy/MarianaIpy2553.webp" alt="Mesa posta com cartão personalizado" />
 </div>
 </div>
 <!-- Linha do meio: Banner M&F -->
@@ -146,13 +146,13 @@
 <!-- Última linha: 3 imagens -->
 <div class="gallery-row bottom-row">
 <div class="gallery-item">
-<img src="images/02-Mariana e Ipy/MarianaIpy_SimãoPernas-2544.webp" alt="Detalhe de mesa com cartão" />
+<img src="images/02-Mariana e Ipy/MarianaIpy2544.webp" alt="Detalhe de mesa com cartão" />
 </div>
 <div class="gallery-item">
-<img src="images/02-Mariana e Ipy/MarianaIpy_SimãoPernas-1613.webp" alt="Prato com cartão personalizado" />
+<img src="images/02-Mariana e Ipy/MarianaIpy1613.webp" alt="Prato com cartão personalizado" />
 </div>
 <div class="gallery-item">
-<img src="images/02-Mariana e Ipy/MarianaIpy_SimãoPernas-1600.webp" alt="Decoração da mesa" />
+<img src="images/02-Mariana e Ipy/MarianaIpy1600.webp" alt="Decoração da mesa" />
 </div>
 </div>
 </div>
