--- a/Underground.html
+++ b/Underground.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARTA - Underground</title>
     <link rel="stylesheet" href="Underground.css">
-    <link rel="stylesheet" href="searc.css">
+    <link rel="stylesheet" href="search.css">
     <link rel="stylesheet" href="project-navigation.css">
     <link rel="stylesheet" href="custom-cursor.css">
     <link rel="stylesheet" href="global-typography.css">
