--- a/Underground.html
+++ b/Underground.html
@@ -87,7 +87,7 @@
     <main>
         <!-- Hero image section -->
         <div class="hero-image">
-            <img src="images/05 Underground/Mockup_capa.webp" alt="Underground magazine cover being held">
+            <img src="images/05-underground/Mockup_capa.webp" alt="Underground magazine cover being held">
         </div>
         
         <!-- Project title and description section -->
