--- a/Underground.html
+++ b/Underground.html
@@ -117,7 +117,7 @@
         <div class="magazine-spreads">
             <!-- Large spread image -->
             <div class="spread-large">
-                <video src="images/05-underground/gif.webm" alt="Underground magazine spread">
+                <img src="images/05-underground/gif.webm" alt="Underground magazine spread">
             </div>
             
             <!-- Grid of 4 smaller spreads -->
