--- a/modus.html
+++ b/modus.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="modus.css">
     <link rel="stylesheet" href="search.css">
     <link rel="stylesheet" href="project-navigation.css">
+    <link rel="stylesheet" href="custom-cursor.css">
+    <link rel="stylesheet" href="global-typography.css">
 
 </head>
 <body>
@@ -86,7 +88,7 @@
     <main>
         <!-- Hero Banner Section - Exact wireframe recreation -->
         <div class="hero-banner">
-            <img src="images/08 MODUS/Banner-gif-1_site.gif" alt="banner-geral">
+            <img src="images/08-modus/banner-site.webm" alt="banner-geral">
         </div>
         
         <!-- Project Description Section -->
@@ -142,13 +144,13 @@
         <div class="mobile-section">
             <div class="mobile-grid">
                 <div class="mobile-item">
-                    <img src="images/08 MODUS/storie 1.png" alt="Mobile Story 1">
+                    <img src="images/08-modus/storie 1.webp" alt="Mobile Story 1">
                 </div>
                 <div class="mobile-item">
                     <img src="images/08 MODUS/storie 3.gif" alt="Mobile Story 3">
                 </div>
                 <div class="mobile-item">
-                    <img src="images/08 MODUS/storie 2.png" alt="Mobile Story 2">
+                    <img src="images/08-modus/storie 2.webp" alt="Mobile Story 2">
                 </div>
             </div>
         </div>
@@ -191,6 +193,8 @@
     </div>
 </footer>
     <script src="homepage-script.js"></script>
-    <script src="search.js"></script>
+    <script src="search.js"></script><
+    <script src="custom-cursor.js"></script>
+   
 </body>
 </html>
