--- a/modus.html
+++ b/modus.html
@@ -119,7 +119,7 @@
 
         <!-- First image section -->
         <div class="placeholder-logo">
-            <img src="images/08 MODUS/GIFlogo.gif" alt="MODUS Logo Animation">
+            <img src="images/08-modus/gif-logo.webm" alt="MODUS Logo Animation">
         </div>
 
         <!-- Three Logo Variations -->
@@ -137,20 +137,20 @@
 
         <!-- Second image section -->
         <div class="placeholder-section">
-            <img src="images/08 MODUS/gif1.gif" alt="MODUS Animation">
+            <img src="images/08-modus/gif-cores.webm" alt="MODUS Animation">
         </div>
 
         <!-- Three Mobile Stories -->
         <div class="mobile-section">
             <div class="mobile-grid">
                 <div class="mobile-item">
-                    <img src="images/08-modus/storie 1.webp" alt="Mobile Story 1">
+                    <img src="images/08-modus/storie-1.webp" alt="Mobile Story 1">
                 </div>
                 <div class="mobile-item">
-                    <img src="images/08 MODUS/storie 3.gif" alt="Mobile Story 3">
+                    <img src="images/08-modus/storie-3.webm" alt="Mobile Story 3">
                 </div>
                 <div class="mobile-item">
-                    <img src="images/08-modus/storie 2.webp" alt="Mobile Story 2">
+                    <img src="images/08-modus/storie-2.webp" alt="Mobile Story 2">
                 </div>
             </div>
         </div>
