--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     <div class="grid-item item-2">
       <video autoplay muted loop playsinline width="800" height="450">
   <source src="images/01-Homepage/SpreadEducationSpreadLove.webm" type="video/webm">
-  <!-- <img src="images/01-Homepage/SpreadEducationSpreadLove.jpg" alt="Logo Spread Education, Spread Love" loading="lazy" width="800" height="450"> -->
+  <img src="images/01-Homepage/SpreadEducationSpreadLove.jpg" alt="Logo Spread Education, Spread Love" loading="lazy" width="800" height="450">
       <div class="overlay">
         <h3>Spread Education, Spread Love</h3>
         <p>Creating a collection that raises awareness for education and love, empowering young students' futures.</p>
