--- a/modus.html
+++ b/modus.html
@@ -88,7 +88,10 @@
     <main>
         <!-- Hero Banner Section - Exact wireframe recreation -->
         <div class="hero-banner">
-            <img src="images/08-modus/banner-site.webm" alt="banner-geral">
+            <video autoplay muted loop playsinline width="100%" height="700">
+                <source src="images/08-modus/banner-site.webm" type="video/webm">
+                <img src="images/08-modus/banner-site.jpg" alt="banner-geral" loading="lazy">
+            </video>
         </div>
         
         <!-- Project Description Section -->
@@ -99,7 +102,7 @@
                 </div>
                 <div class="content-column">
                     <div class="description-text">
-                        <p>MODUS is a fictional event created to celebrate International Design Day through a reflection on the role of design as a practical, human-centered discipline. Inspired by the handmade “shepherd’s spoon” — an object shaped by use, not aesthetics — the event invites discussion on how design can be both rational and empathetic.</p>
+                        <p>MODUS is a fictional event created to celebrate International Design Day through a reflection on the role of design as a practical, human-centered discipline. Inspired by the handmade "shepherd's spoon" — an object shaped by use, not aesthetics — the event invites discussion on how design can be both rational and empathetic.</p>
                     </div>
                     <div class="project-solution">
                         <h3>THE PROJECT</h3>
@@ -119,7 +122,10 @@
 
         <!-- First image section -->
         <div class="placeholder-logo">
-            <img src="images/08-modus/gif-logo.webm" alt="MODUS Logo Animation">
+            <video autoplay muted loop playsinline>
+                <source src="images/08-modus/gif-logo.webm" type="video/webm">
+                <img src="images/08-modus/gif-logo.jpg" alt="MODUS Logo Animation" loading="lazy">
+            </video>
         </div>
 
         <!-- Three Logo Variations -->
@@ -137,7 +143,10 @@
 
         <!-- Second image section -->
         <div class="placeholder-section">
-            <img src="images/08-modus/gif-cores.webm" alt="MODUS Animation">
+            <video autoplay muted loop playsinline>
+                <source src="images/08-modus/gif-cores.webm" type="video/webm">
+                <img src="images/08-modus/gif-cores.jpg" alt="MODUS Animation" loading="lazy">
+            </video>
         </div>
 
         <!-- Three Mobile Stories -->
@@ -147,7 +156,10 @@
                     <img src="images/08-modus/storie-1.webp" alt="Mobile Story 1">
                 </div>
                 <div class="mobile-item">
-                    <img src="images/08-modus/storie-3.webm" alt="Mobile Story 3">
+                    <video autoplay muted loop playsinline>
+                        <source src="images/08-modus/storie-3.webm" type="video/webm">
+                        <img src="images/08-modus/storie-3.jpg" alt="Mobile Story 3" loading="lazy">
+                    </video>
                 </div>
                 <div class="mobile-item">
                     <img src="images/08-modus/storie-2.webp" alt="Mobile Story 2">
@@ -193,7 +205,7 @@
     </div>
 </footer>
     <script src="homepage-script.js"></script>
-    <script src="search.js"></script><
+    <script src="search.js"></script>
     <script src="custom-cursor.js"></script>
    
 </body>
