--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     
     <!-- Quarta linha - CORRIGIDO: removidas classes empty-item -->
     <div class="grid-item item-7">
-      <img src="images/08-MODUS/Banner-gif-1_site.gif" alt="Banner MODUS" loading="lazy" width="800" height="450">
+      <img src="images/08-modus/banner-site.webm" alt="Banner MODUS" loading="lazy" width="800" height="450">
       <div class="overlay">
         <h3>MODUS</h3>
         <p>A fictional event for International Design Day that celebrates design as a practical, human-centered discipline, valuing function over form through clarity, humility, and purpose.</p>
