--- a/modus.html
+++ b/modus.html
@@ -89,7 +89,7 @@
         <!-- Hero Banner Section - Exact wireframe recreation -->
         <div class="hero-banner">
             <video autoplay muted loop playsinline width="100%" height="700">
-                <source src="images/08-modus/banner-site.webm" type="video/webm">
+                <source src="images/08-modus/banner-site.gif" type="video/webm">
                 <img src="images/08-modus/banner-site.jpg" alt="banner-geral" loading="lazy">
             </video>
         </div>
@@ -123,7 +123,7 @@
         <!-- First image section -->
         <div class="placeholder-logo">
             <video autoplay muted loop playsinline>
-                <source src="images/08-modus/gif-logo.webm" type="video/webm">
+                <source src="images/08-modus/gif-logo.gif" type="video/webm">
                 <img src="images/08-modus/gif-logo.jpg" alt="MODUS Logo Animation" loading="lazy">
             </video>
         </div>
@@ -144,7 +144,7 @@
         <!-- Second image section -->
         <div class="placeholder-section">
             <video autoplay muted loop playsinline>
-                <source src="images/08-modus/gif-cores.webm" type="video/webm">
+                <source src="images/08-modus/gif-cores.gif" type="video/webm">
                 <img src="images/08-modus/gif-cores.jpg" alt="MODUS Animation" loading="lazy">
             </video>
         </div>
@@ -157,7 +157,7 @@
                 </div>
                 <div class="mobile-item">
                     <video autoplay muted loop playsinline>
-                        <source src="images/08-modus/storie-3.webm" type="video/webm">
+                        <source src="images/08-modus/storie-3.gif" type="video/webm">
                         <img src="images/08-modus/storie-3.jpg" alt="Mobile Story 3" loading="lazy">
                     </video>
                 </div>
