--- a/Mariana&Felipe.html
+++ b/Mariana&Felipe.html
@@ -28,7 +28,7 @@
         <div class="right-elements">
             <!-- Menu desktop -->
             <nav class="desktop-nav">
-                <a href="">about me</a>
+                <a href="about-me.html">about me</a>
                 <a href="index.html">work</a>
             </nav>
             
@@ -82,7 +82,7 @@
 <!-- Menu mobile fullscreen -->
 <div class="mobile-nav">
     <div class="close-btn">✕</div>
-    <a href="#">about me</a>
+    <a href="about-me.html">about me</a>
     <a href="index.html">work</a>
 </div>
 
