--- a/falp.html
+++ b/falp.html
@@ -27,7 +27,7 @@
         <div class="right-elements">
             <!-- Menu desktop -->
             <nav class="desktop-nav">
-                <a href="#">about me</a>
+                <a href="about-me.html">about me</a>
                 <a href="index.html">work</a>
             </nav>
             
@@ -81,7 +81,7 @@
     <!-- Menu mobile fullscreen -->
     <div class="mobile-nav">
         <div class="close-btn">✕</div>
-        <a href="#">about me</a>
+        <a href="about-me.html">about me</a>
         <a href="index.html">work</a>
     </div>
 
