--- a/about-me.html
+++ b/about-me.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARTA - About Me</title>
-    <link rel="stylesheet" href="about-me.min.css">
-    <link rel="stylesheet" href="search.min.css">
-    <link rel="stylesheet" href="custom-cursor.min.css">
+    <link rel="stylesheet" href="about-me.css">
+    <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="custom-cursor.css">
+    <link rel="stylesheet" href="global-typography.css">
+    <link rel="stylesheet" href="project-navigation.css">
 </head>
 <body>
     <header>
@@ -176,8 +178,8 @@
             </div>
         </div>
     </footer>
-    <script src="custom-cursor.min.js"></script>
-    <script src="homepage-script.min.js"></script>
-    <script src="search.min.js"></script>
+    <script src="custom-cursor.js"></script>
+    <script src="homepage-script.js"></script>
+    <script src="search.js"></script>
 </body>
 </html>
