--- a/modus.html
+++ b/modus.html
@@ -88,10 +88,7 @@
     <main>
         <!-- Hero Banner Section - Exact wireframe recreation -->
         <div class="hero-banner">
-            <video autoplay muted loop playsinline width="100%" height="700">
-                <source src="images/08-modus/banner-site.gif" type="video/webm">
-                <img src="images/08-modus/banner-site.jpg" alt="banner-geral" loading="lazy">
-            </video>
+            <img src="images/08-modus/banner-site.webm" alt="banner-geral">
         </div>
         
         <!-- Project Description Section -->
@@ -122,10 +119,7 @@
 
         <!-- First image section -->
         <div class="placeholder-logo">
-            <video autoplay muted loop playsinline>
-                <source src="images/08-modus/gif-logo.gif" type="video/webm">
-                <img src="images/08-modus/gif-logo.jpg" alt="MODUS Logo Animation" loading="lazy">
-            </video>
+            <img src="images/08-modus/gif-logo.webm" alt="MODUS Logo Animation">
         </div>
 
         <!-- Three Logo Variations -->
@@ -143,10 +137,7 @@
 
         <!-- Second image section -->
         <div class="placeholder-section">
-            <video autoplay muted loop playsinline>
-                <source src="images/08-modus/gif-cores.gif" type="video/webm">
-                <img src="images/08-modus/gif-cores.jpg" alt="MODUS Animation" loading="lazy">
-            </video>
+            <img src="images/08-modus/gif-cores.webm" alt="MODUS Animation">
         </div>
 
         <!-- Three Mobile Stories -->
@@ -156,10 +147,7 @@
                     <img src="images/08-modus/storie-1.webp" alt="Mobile Story 1">
                 </div>
                 <div class="mobile-item">
-                    <video autoplay muted loop playsinline>
-                        <source src="images/08-modus/storie-3.gif" type="video/webm">
-                        <img src="images/08-modus/storie-3.jpg" alt="Mobile Story 3" loading="lazy">
-                    </video>
+                    <img src="images/08-modus/storie-3.webm" alt="Mobile Story 3">
                 </div>
                 <div class="mobile-item">
                     <img src="images/08-modus/storie-2.webp" alt="Mobile Story 2">
