--- a/modus.html
+++ b/modus.html
@@ -88,7 +88,7 @@
     <main>
         <!-- Hero Banner Section - Exact wireframe recreation -->
         <div class="hero-banner">
-            <img src="images/08-modus/banner-site.webm" alt="banner-geral">
+            <img src="images/08-modus/banner-site.gif" alt="banner-geral">
         </div>
         
         <!-- Project Description Section -->
@@ -119,7 +119,7 @@
 
         <!-- First image section -->
         <div class="placeholder-logo">
-            <img src="images/08-modus/gif-logo.webm" alt="MODUS Logo Animation">
+            <img src="images/08-modus/gif-logo.gif" alt="MODUS Logo Animation">
         </div>
 
         <!-- Three Logo Variations -->
@@ -137,7 +137,7 @@
 
         <!-- Second image section -->
         <div class="placeholder-section">
-            <img src="images/08-modus/gif-cores.webm" alt="MODUS Animation">
+            <img src="images/08-modus/gif-cores.gif" alt="MODUS Animation">
         </div>
 
         <!-- Three Mobile Stories -->
@@ -147,7 +147,7 @@
                     <img src="images/08-modus/storie-1.webp" alt="Mobile Story 1">
                 </div>
                 <div class="mobile-item">
-                    <img src="images/08-modus/storie-3.webm" alt="Mobile Story 3">
+                    <img src="images/08-modus/storie-3.gif" alt="Mobile Story 3">
                 </div>
                 <div class="mobile-item">
                     <img src="images/08-modus/storie-2.webp" alt="Mobile Story 2">
