--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     
     <!-- Terceira linha -->
     <div class="grid-item item-5">
-      <img src="images/05-underground/gif.webm" alt="Underground" loading="lazy" width="800" height="450">
+      <img src="images/05-underground/gif" alt="Underground" loading="lazy" width="800" height="450">
       <div class="overlay">
         <h3>Underground</h3>
         <p>A magazine honoring British underground design, reflecting on Peter Saville's transformative visual legacy and the ongoing innovation shaping the nation's creative identity.</p>
@@ -154,7 +154,7 @@
     
     <!-- Quarta linha - CORRIGIDO: removidas classes empty-item -->
     <div class="grid-item item-7">
-      <img src="images/08-modus/banner-site.webm" alt="Banner MODUS" loading="lazy" width="800" height="450">
+      <img src="images/08-modus/banner-site.gif" alt="Banner MODUS" loading="lazy" width="800" height="450">
       <div class="overlay">
         <h3>MODUS</h3>
         <p>A fictional event for International Design Day that celebrates design as a practical, human-centered discipline, valuing function over form through clarity, humility, and purpose.</p>
