--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <a href="modus.html" class="grid-link" aria-label="Ver projeto MODUS"></a>
     </div>
     <div class="grid-item item-8">
-      <img src="images/10-fyted/TDMovieOut.webm" alt="" loading="lazy" width="800" height="450">
+      <img src="images/10-fyted/fyt1.mp4" alt="" loading="lazy" width="800" height="450">
       <div class="overlay">
         <h3>fyted</h3>
         <p>A speculative interactive experience revealing how AI job interviews hide bias behind polite efficiency, exposing the human cost of automated hiring systems.</p>
