--- a/fyted.html
+++ b/fyted.html
@@ -87,7 +87,7 @@
     <main>
         <!-- Hero image section -->
         <div class="hero-image">
-            <img src="images/10 fyted/TDMovieOut.0.mov" alt="FYTED Collection Hero Image">
+            <img src="images/10-fyted/fyt1.mp4" alt="FYTED Collection Hero Image">
         </div>
         
         <!-- Project header section -->
