--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="A-Arte-da-Mesa.css">
     <link rel="stylesheet" href="search.css">
     <link rel="stylesheet" href="project-navigation.css">
+    <link rel="stylesheet" href="custom-cursor.css">
+    <link rel="stylesheet" href="global-typography.css">
+    
 </head>
 <body>
     <header>
@@ -187,6 +190,7 @@
 
     <script src="homepage-script.js"></script>
     <script src="search.js"></script>
+    <script src="custom-cursor.js"></script>
 
     
 </body>
