--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MARTA - Portfólio</title>
-  <link rel="stylesheet" href="index.css">
-  <link rel="stylesheet" href="search.css">
-  <link rel="stylesheet" href="custom-cursor.css">
+  <link rel="stylesheet" href="index.min.css">
+  <link rel="stylesheet" href="search.min.css">
+  <link rel="stylesheet" href="custom-cursor.min.css">
 </head>
 <body>
 
@@ -105,7 +105,7 @@
     <div class="grid-item item-2">
       <video autoplay muted loop playsinline width="800" height="450">
   <source src="images/01-Homepage/SpreadEducationSpreadLove.webm" type="video/webm">
-  <img src="images/01-Homepage/SpreadEducationSpreadLove.jpg" alt="Logo Spread Education, Spread Love" loading="lazy" width="800" height="450">
+  <!-- <img src="images/01-Homepage/SpreadEducationSpreadLove.jpg" alt="Logo Spread Education, Spread Love" loading="lazy" width="800" height="450"> -->
       <div class="overlay">
         <h3>Spread Education, Spread Love</h3>
         <p>Creating a collection that raises awareness for education and love, empowering young students' futures.</p>
@@ -126,7 +126,7 @@
     
     <!-- Segunda linha -->
     <div class="grid-item item-3">
-      <img src="images/06-falp/Business-Card_Mockup.webp" alt="Cartão de visita FALP" loading="lazy" width="800" height="450">
+      <img src="images/06-FALP/Business-Card-Mockup.webp" alt="Cartão de visita FALP" loading="lazy" width="800" height="450">
       <div class="overlay">
         <h3>FALP</h3>
         <p>Visual identity for the Federation of Portuguese Language Lawyers, promoting legal cooperation among Lusophone countries and human rights.</p>
@@ -144,7 +144,7 @@
     
     <!-- Terceira linha -->
     <div class="grid-item item-5">
-      <img src="images/05-underground/gif" alt="Underground" loading="lazy" width="800" height="450">
+      <img src="images/05-underground/GIF-revista.gif" alt="Underground" loading="lazy" width="800" height="450">
       <div class="overlay">
         <h3>Underground</h3>
         <p>A magazine honoring British underground design, reflecting on Peter Saville's transformative visual legacy and the ongoing innovation shaping the nation's creative identity.</p>
@@ -171,10 +171,10 @@
     </div>
   </div>
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-  <script src="homepage-script.js"></script>
-  <script src="search.js"></script>
-  <script src="custom-cursor.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.min.js"></script>
+  <script src="homepage-script.min.js"></script>
+  <script src="search.min.js"></script>
+  <script src="custom-cursor.min.js"></script>
 </body>
 
 
