--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MARTA - Portfólio</title>
-  <link rel="stylesheet" href="index.min.css">
-  <link rel="stylesheet" href="search.min.css">
-  <link rel="stylesheet" href="custom-cursor.min.css">
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="search.css">
+  <link rel="stylesheet" href="custom-cursor.css">
 </head>
 <body>
 
@@ -104,8 +104,8 @@
     </div>
     <div class="grid-item item-2">
       <video autoplay muted loop playsinline width="800" height="450">
-  <source src="images/01-Homepage/SpreadEducationSpreadLove.webm" type="video/webm">
-  <!-- <img src="images/01-Homepage/SpreadEducationSpreadLove.jpg" alt="Logo Spread Education, Spread Love" loading="lazy" width="800" height="450"> -->
+      <source src="images/01-Homepage/SpreadEducationSpreadLove.webm" type="video/webm">
+      <img src="images/01-Homepage/SpreadEducationSpreadLove.jpg" alt="Logo Spread Education, Spread Love" loading="lazy" width="800" height="450">
       <div class="overlay">
         <h3>Spread Education, Spread Love</h3>
         <p>Creating a collection that raises awareness for education and love, empowering young students' futures.</p>
@@ -171,7 +171,7 @@
     </div>
   </div>
   
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
   <script src="homepage-script.min.js"></script>
   <script src="search.min.js"></script>
   <script src="custom-cursor.min.js"></script>
