--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
   </div>
   
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-  <script src="homepage-script.min.js"></script>
-  <script src="search.min.js"></script>
-  <script src="custom-cursor.min.js"></script>
+  <script src="homepage-script.js"></script>
+  <script src="search.js"></script>
+  <script src="custom-cursor.js"></script>
 </body>
 
 
