--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -27,7 +27,7 @@
         <div class="right-elements">
             <!-- Menu desktop -->
             <nav class="desktop-nav">
-                <a href="#">about me</a>
+                <a href="about-me.html">about me</a>
                 <a href="index.html">work</a>
             </nav>
             
@@ -80,7 +80,7 @@
     <!-- Menu mobile fullscreen -->
     <div class="mobile-nav">
         <div class="close-btn">✕</div>
-        <a href="#">about me</a>
+        <a href="about-me.html">about me</a>
         <a href="index.html">work</a>
     </div>
 
@@ -88,7 +88,7 @@
     <main>
         <!-- Hero image section -->
         <div class="hero-image">
-            <img src="images/04 A Arte da Mesa/livrofrente_mesa.jpg" alt="A Arte da Mesa book cover on a textured background">
+            <img src="images/04-adm/livrofrente_mesa.jpg" alt="A Arte da Mesa book cover on a textured background">
         </div>
         
         <!-- Project title and description section -->
@@ -117,18 +117,18 @@
         <div class="book-spreads">
             <div class="spreads-row">
                 <div class="spread-item">
-                    <img src="images/04 A Arte da Mesa/Página introdução.png" alt="Book spread showing table setting diagram">
+                    <img src="images/04-adm/p-introducao.png" alt="Book spread showing table setting diagram">
                 </div>
                 <div class="spread-item">
-                    <img src="images/04 A Arte da Mesa/página menu.png" alt="Book spread showing utensils guide">
+                    <img src="images/04-adm/p-menu.png" alt="Book spread showing utensils guide">
                 </div>
             </div>
             <div class="spreads-row">
                 <div class="spread-item">
-                    <img src="images/04 A Arte da Mesa/Página vinhos.png" alt="Book spread showing wine guide">
+                    <img src="images/04-adm/p-vinhos.png" alt="Book spread showing wine guide">
                 </div>
                 <div class="spread-item">
-                    <img src="images/04 A Arte da Mesa/Página_serviço copos.png" alt="Book spread showing etiquette instructions">
+                    <img src="images/04-adm/p-servico-copos.png" alt="Book spread showing etiquette instructions">
                 </div>
             </div>
         </div>
