--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -109,6 +109,10 @@
                         <h3>SCOPE</h3>
                         <p>Brand Identity, Brand Strategy, Cover Design, Layout Design, Website</p>
                     </div>
+                    <div class="project-credits">
+                        <h3>TEAM</h3>
+                        <p>Afonso Quintela and Pedro Queiroz Ribeiro</p>
+                    </div>
                 </div>
             </div>
         </div>
