--- a/SpreadEducationSpreadLove.html
+++ b/SpreadEducationSpreadLove.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MARTA - Portfolio</title>
-    <link rel="stylesheet" href="SpreadEducationSpreadLove.min.css">
-    <link rel="stylesheet" href="search.min.css">
-    <link rel="stylesheet" href="project-navigation.min.css">
-    <link rel="stylesheet" href="custom-cursor.min.css">
+    <link rel="stylesheet" href="SpreadEducationSpreadLove.css">
+    <link rel="stylesheet" href="search.css">
+    <link rel="stylesheet" href="project-navigation.css">
+    <link rel="stylesheet" href="custom-cursor.css">
     <link rel="stylesheet" href="global-typography.css">
 </head>
 <body>
@@ -206,8 +206,8 @@
         </div>
     </div>
 </footer>
-    <script src="homepage-script.min.js"></script>
-    <script src="search.min.js"></script>
-    <script src="custom-cursor.min.js"></script>
+    <script src="homepage-script.js"></script>
+    <script src="search.js"></script>
+    <script src="custom-cursor.js"></script>
 </body>
 </html>
