--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     
     <!-- Item PAEZ - largura total -->
     <div class="grid-item item-6">
-      <img src="images/09-paez/padrao-tomate.svg" alt="Padrão de tomate" loading="lazy">
+      <img src="images/09-paez/padrao-tomate.svg tomate.svg" alt="Padrão de tomate" loading="lazy">
       <div class="overlay">
         <h3>PAEZ - Coming Soon</h3>
         <p>Winning collection of the PAEZ x Belas-Artes Summer 2026 contest, celebrating a simple, mindful lifestyle connected to the earth through the raw texture and vibrancy of vegetables.</p>
@@ -173,10 +173,10 @@
     </div>
   </div>
   
-  <script src="homepage-script.js"></script>
+  <script src="homepage-script.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
-  <script src="search.js"></script>
-  <script src="custom-cursor.js"></script>
+  <script src="search.min.js"></script>
+  <script src="custom-cursor.min.js"></script>
 </body>
 
 <!-- HTML do Footer Final -->
