--- a/SpreadEducationSpreadLove.html
+++ b/SpreadEducationSpreadLove.html
@@ -87,7 +87,10 @@
     <main>
         <!-- Seção Hero -->
         <div class="hero-image">
-            <img src="images/03 Spread education, spread love/Gif_intro.webm" alt="Pessoa servindo vinho em uma mesa de jantar" />
+            <video class="hero-video" autoplay muted loop playsinline>
+                <source src="images/03 Spread education, spread love/gif-hero.mp4" type="video/mp4">
+                <img src="images/03 Spread education, spread love/gif-hero-fallback.jpg" alt="Pessoa servindo vinho em uma mesa de jantar" loading="lazy">
+            </video>
         </div>
         
         <!-- Seção do título e descrição -->
