--- a/about-me.html
+++ b/about-me.html
@@ -93,7 +93,7 @@
     <section class="main-bio-section">
         <div class="bio-layout">
             <div class="bio-image">
-                <img src="images/07 About Me/_R5A2864.jpg" alt="Marta profile photo">
+                <img src="images/R5A2864.jpg" alt="Marta profile photo">
             </div>
             <div class="bio-content">
                 <p>I'm a multidisciplinary designer who sees design as a way to spark reflection, connection and change. I’ve always loved clear answers like “yes” and “no,” but design taught me that often, the real insight lies in “it depends,” just like the sky doesn’t always have to be blue; it can be green, yellow or even purple.</p>
