--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -139,11 +139,14 @@
         
         <!-- Digital concepts section with light green background -->
         <div class="digital-section">
-            <h3>DIGITAL CONCEPTS</h3>
-            <div class="digital-concept-container">
-                <img src="images/01 Arte da Mesa/digital-concept-1.jpg" alt="Digital concept for website layout">
-            </div>
+        <h3>DIGITAL CONCEPTS</h3>
+        <div class="digital-concept-container">
+            <video controls autoplay muted loop playsinline>
+                <source src="images/04-adm/Mockup-pc.mov" type="video/quicktime">
+                Your browser does not support the video tag.
+            </video>
         </div>
+    </div>
         
         <!-- Mobile mockups section with orange background -->
         <div class="mobile-section">
