--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -137,16 +137,17 @@
             </div>
         </div>
         
-        <!-- Digital concepts section with light green background -->
+        <!-- Digital concepts section otimizada -->
         <div class="digital-section">
-        <h3>DIGITAL CONCEPTS</h3>
-        <div class="digital-concept-container">
-            <video controls autoplay muted loop playsinline>
-                <source src="images/04-adm/Mockup-pc.mov" type="video/quicktime">
-                Your browser does not support the video tag.
-            </video>
+            <h3>DIGITAL CONCEPTS</h3>
+            <div class="digital-concept-container">
+                <video controls muted loop playsinline preload="metadata">
+                    <source src="images/04-adm/Mockup-pc.mov" type="video/quicktime">
+                    <source src="images/04-adm/Mockup-pc.mp4" type="video/mp4">
+                    Seu navegador não suporta o elemento de vídeo.
+                </video>
+            </div>
         </div>
-    </div>
         
         <!-- Mobile mockups section with orange background -->
         <div class="mobile-section">
