--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -139,9 +139,8 @@
         
         <!-- Digital concepts section otimizada -->
         <div class="digital-section">
-            <h3>DIGITAL CONCEPTS</h3>
             <div class="digital-concept-container">
-                <video controls muted loop playsinline preload="metadata">
+                <video autoplay muted loop playsinline preload="metadata">
                     <source src="images/04-adm/Mockup-pc.mov" type="video/quicktime">
                     <source src="images/04-adm/Mockup-pc.mp4" type="video/mp4">
                     Seu navegador não suporta o elemento de vídeo.
