--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -152,7 +152,7 @@
         <div class="mobile-section">
             <h3>MOBILE EXPERIENCE</h3>
             <div class="mobile-mockups-container">
-                <img src="images/01 Arte da Mesa/mobile-mockups.jpg" alt="Mobile app mockups">
+                <img src="images/04-adm/site-mobile.png" alt="Mobile app mockups">
             </div>
         </div>
     </main>
