--- a/Underground.html
+++ b/Underground.html
@@ -26,7 +26,7 @@
         <div class="right-elements">
             <!-- Menu desktop -->
             <nav class="desktop-nav">
-                <a href="#">about me</a>
+                <a href="about-me.html">about me</a>
                 <a href="index.html">work</a>
             </nav>
             
