--- a/Underground.html
+++ b/Underground.html
@@ -80,7 +80,7 @@
     <!-- Menu mobile fullscreen -->
     <div class="mobile-nav">
         <div class="close-btn">✕</div>
-        <a href="#">about me</a>
+        <a href="about-me.html">about me</a>
         <a href="index.html">work</a>
     </div>
 
