--- a/SpreadEducationSpreadLove.html
+++ b/SpreadEducationSpreadLove.html
@@ -202,6 +202,13 @@
                 <div class="footer-line"></div>
                 <div class="get-in-text-bottom">touch</div>
             </a>
+
+            <!-- Mobile static version -->
+            <a href="mailto:martinhabpa@gmail.com" class="footer-center-mobile">
+                <span class="get-in-text-top-mobile">get in</span>
+                <div class="footer-line-mobile"></div>
+                <span class="get-in-text-bottom-mobile">touch</span>
+            </a>
             
             <div class="footer-right">
                 <a href="https://www.instagram.com/martabpaisdealmeida/" target="_blank">instagram</a>
