--- a/about-me.html
+++ b/about-me.html
@@ -165,12 +165,19 @@
                 <p>© 2025 marta bello pais de almeida</p>
             </div>
             
-            <!-- Center hover effect -->
-            <div class="footer-center">
-                <div class="get-in-text-top">get in</div>
-                <div class="footer-line"></div>
-                <div class="get-in-text-bottom">touch</div>
-            </div>
+        <!-- Center hover effect -->
+        <a href="mailto:martinhabpa@gmail.com" class="footer-center">
+            <div class="get-in-text-top">get in</div>
+            <div class="footer-line"></div>
+            <div class="get-in-text-bottom">touch</div>
+        </a>
+
+        <!-- Mobile static version -->
+        <a href="mailto:martinhabpa@gmail.com" class="footer-center-mobile">
+            <span class="get-in-text-top-mobile">get in</span>
+            <div class="footer-line-mobile"></div>
+            <span class="get-in-text-bottom-mobile">touch</span>
+        </a>
             
             <div class="footer-right">
                 <a href="#" target="_blank">instagram</a>
