--- a/fyted.html
+++ b/fyted.html
@@ -176,11 +176,18 @@
             </div>
             
             <!-- Center hover effect -->
-            <div class="footer-center">
+            <a href="mailto:martinhabpa@gmail.com" class="footer-center">
                 <div class="get-in-text-top">get in</div>
                 <div class="footer-line"></div>
                 <div class="get-in-text-bottom">touch</div>
-            </div>
+            </a>
+
+            <!-- Mobile static version -->
+            <a href="mailto:martinhabpa@gmail.com" class="footer-center-mobile">
+                <span class="get-in-text-top-mobile">get in</span>
+                <div class="footer-line-mobile"></div>
+                <span class="get-in-text-bottom-mobile">touch</span>
+            </a>
             
             <div class="footer-right">
                 <a href="#" target="_blank">instagram</a>
