--- a/about-me.html
+++ b/about-me.html
@@ -174,8 +174,8 @@
             </a>
                 
             <div class="footer-right">
-                <a href="#" target="_blank">instagram</a>
-                <a href="#" target="_blank">linkedin</a>
+                <a href="https://www.instagram.com/martabpaisdealmeida/" target="_blank">instagram</a>
+                <a href="https://www.linkedin.com/in/marta-bello-pais-de-almeida/" target="_blank">linkedin</a>
             </div>
         </div>
     </footer>
