--- a/modus.html
+++ b/modus.html
@@ -86,9 +86,11 @@
     </div>
 
     <main>
-        <!-- Hero Banner Section - Exact wireframe recreation -->
+        <!-- Hero Banner Section - Corrigido para mobile -->
         <div class="hero-banner">
-            <img src="images/08-modus/banner-site.gif" alt="banner-geral">
+            <div class="hero-image-container">
+                <img src="images/08-modus/banner-site.gif" alt="banner-geral">
+            </div>
         </div>
         
         <!-- Project Description Section -->
