--- a/fyted.html
+++ b/fyted.html
@@ -85,9 +85,20 @@
     </div>
 
     <main>
-        <!-- Hero image section -->
+        <!-- Hero video section - UPDATED -->
         <div class="hero-image">
-            <img src="images/10-fyted/fyt1.mp4" alt="FYTED Collection Hero Image">
+            <video 
+                autoplay 
+                muted 
+                loop 
+                playsinline 
+                preload="auto"
+                poster="images/10-fyted/fyt1-poster.jpg">
+                <source src="images/10-fyted/fyt1.mp4" type="video/mp4">
+                <source src="images/10-fyted/fyt1.webm" type="video/webm">
+                <!-- Fallback for browsers that don't support video -->
+                <img src="images/10-fyted/fyt1-fallback.jpg" alt="FYTED Collection Hero Image">
+            </video>
         </div>
         
         <!-- Project header section -->
