--- a/Underground.html
+++ b/Underground.html
@@ -117,10 +117,10 @@
         <div class="magazine-spreads">
             <!-- Large spread image -->
             <div class="spread-large">
-                <video autoplay muted loop playsinline>
-                    <source src="images/05-underground/gif.webm" type="video/webm">
-                    <img src="images/05-underground/UNDER002_FullSpread.webp" alt="Pessoa servindo vinho em uma mesa de jantar" loading="lazy" />
-                </video>
+            <video autoplay muted loop playsinline webkit-playsinline>
+                <source src="images/05-underground/gif.webm" type="video/webm">
+                <img src="images/05-underground/UNDER002_FullSpread.webp" alt="Pessoa servindo vinho em uma mesa de jantar" loading="lazy" />
+            </video>
             </div>
             
             <!-- Grid of 4 smaller spreads -->
