--- a/A-Arte-da-Mesa.html
+++ b/A-Arte-da-Mesa.html
@@ -138,10 +138,10 @@
         <!-- Digital concepts section -->
         <div class="digital-section">
             <div class="digital-concept-container">
-                <video autoplay muted loop playsinline preload="metadata">
-                    <source src="images/04-adm/Mockup-pc.mov" type="video/quicktime">
+                <video autoplay muted loop playsinline preload="auto" controls>
                     <source src="images/04-adm/Mockup-pc.mp4" type="video/mp4">
-                    Seu navegador não suporta o elemento de vídeo.
+                    <source src="images/04-adm/Mockup-pc.mov" type="video/quicktime">
+                    <p>Seu navegador não suporta vídeos HTML5. <a href="images/04-adm/Mockup-pc.mp4">Baixe o vídeo aqui</a>.</p>
                 </video>
             </div>
         </div>
